<resources>

    <!-- Global Parameters -->
    <string name="app_name">Ultra Check List</string>
    <string name="file_directory">/Ultra_Checklist/</string><!-- Make sure to surrond it with '/' **** '/'-->
    <!-- Misc-->

    <!--  Choice Screen -->
    <string name="title_activity_choice_screen">ChoiceScreen</string>
    <string name="cs_load_button">Load</string>
    <string name="cs_create_button">Create</string>

    <!--  Create File Dialog -->
    <string name="cfd_title">Enter the name of the file</string>
    <string name="cfd_enter_text">uc_</string>
    <string name="cfd_positive">Validate</string>
    <string name="cfd_negative">Cancel</string>

    <!--  Load File Dialog -->
    <string name="lfd_title">Choose the file to load</string>
    <string name="lfd_positive">Load</string>
    <string name="lfd_negative">Cancel</string>


    <!--  Edit Race File Activity -->
    <string name="erf_save_button">Save</string>
    <string name="erf_aid_station_presentation">List of set aid stations:</string>
    <string name="erf_add_aid_button">Add an Aid Station</string>
    <string name="erf_add_timer_button">Add a timed interrupt</string>
    <string name="erf_todo_description">Todos Listed: </string>

    <!--  Edit Aid Station Stops -->
    <string name="eas_save_button">Save</string>
    <string name="eas_add_todo_button">Add TODO Action</string>
    <string name="eas_name_hint">Name Of the Aid Station</string>
    <string name="eas_name_text">Name</string>
    <string name="eas_km_done_text">Km Point</string>
    <string name="eas_km_done_hint">Km Already Run</string>
    <string name="eas_dplus_done_text">D+</string>
    <string name="eas_dplus_done_hint">Aggregated Climbing</string>
    <string name="eas_km_to_next_text">Km to Next</string>
    <string name="eas_km_to_next_hint">Km to Next Station</string>
    <string name="eas_dplus_to_next_text">D+ to Next</string>
    <string name="eas_dplus_to_next_hint">D+ to Next Station</string>
    <string name="eas_todo_select_image">Select Image</string>
    <string name="eas_todo_select_text">Select Text</string>
    <string name="eas_todo_enter_text">Enter Details of the TODO Action</string>
    <string name="eas_cancel">Cancel</string>

    <!--  Adding todos custom class -->
    <string name="tev_add_todo_button">Add TODO Action</string>
    <string name="tev_todo_select_image">Select Image</string>
    <string name="tev_todo_select_text">Select Text</string>
    <string name="tev_todo_enter_text">Enter Details of the TODO Action</string>


    <!--  Drawable Descriptions -->
    <string name="drawable_action_meditate">Relax, Focus or Stretch</string>
    <string name="drawable_action_sleep">Sleep or Rest</string>




</resources>
