<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_race_file"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context="com.example.pol.cardview.EditRaceFileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/erf_base_layout">

            <Button
                android:text="@string/erf_save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/erf_save_button" />

            <TextView
                android:text="@string/erf_aid_station_presentation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <Button
                android:text="@string/erf_add_aid_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/erf_add_aid_button" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/erf_aid_station_layout">

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/erf_alarms_layout"></LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
